marketplace/services/langfuse/resources/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: langfuse-ingress
  namespace: langfuse
  labels:
    app: langfuse
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /(langfuse)(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: langfuse-web
            port:
              name: http
